# svg2excalidraw

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
.agents/instructions/: project-guidelines.instructions.md
.github/workflows/: ci.yml
source/svg2excalidraw/: app.py  converter.py
source/svg2excalidraw/core/: __init__.py  mapper.py  parser.py  tracer.py  walker.py
source/svg2excalidraw/models/: __init__.py  elements.py  scene.py
source/svg2excalidraw/utils/: __init__.py  geometry.py  identifiers.py
static/: index.html
tests/: conftest.py  test_converter.py
tests/core/: test_mapper.py  test_parser.py  test_tracer.py  test_walker.py
tests/models/: test_elements.py  test_scene.py
tests/utils/: test_geometry.py  test_identifiers.py
