[project]
name = "svg2excalidraw"
version = "1.0.0"
description = "Convert SVG files to Excalidraw objects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.133.0",
    "uvicorn[standard]==0.41.0",
    "lxml==6.0.2",
    "svgelements==1.9.6",
    "numpy==2.4.2",
    "nanoid==2.0.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "httpx==0.28.1",
    "ruff==0.15.2",
    "taskipy==1.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["source"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.taskipy.tasks]
test    = "pytest -v"
test-q  = "pytest -q"
lint    = "ruff check ."
format  = "ruff format ."
check   = "ruff check . && ruff format --check ."
fix     = "ruff check --fix . && ruff format ."
dev     = "uvicorn source.svg2excalidraw.app:app --reload --port 8000"
reqs    = "uv export --no-dev --no-hashes -o requirements.txt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/svg2excalidraw"]
